--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+# Ensure the environment variables are set correctly
+spring.datasource.url=jdbc:postgresql://${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD} 
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
