--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,6 @@ spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Ensure the environment variables are set correctly
-spring.datasource.url=jdbc:postgresql://${SPRING_DATASOURCE_URL}
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
