--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.data.rest.basePath=/api
 #spring.h2.console.path=/h2-console
 spring.jpa.open-in-view=true
 spring.datasource.driver-class-name=org.postgresql.Driver
-server.port=8080
+server.port=${PORT:8080}
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 
